--- a/branches/1.6-@quila/1.6/components/com_kunena/template/default/css/images.css
+++ b/branches/1.6-@quila/1.6/components/com_kunena/template/default/css/images.css
@@ -231,3 +231,10 @@ div#kprofile-stats ul li span.rank-admin {
 #lbCloseLink {
 	background: transparent url(../images/closelabel.gif) no-repeat center;
 }
+
+/* 		WHO IS ONLINE
+------------------------------------------------------------------- */
+
+#Kunena .whoicon {
+	background: url("../images/who_is_online.png") no-repeat center top;
+}
